# Hollow-Scorpion

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/QtAndOpenCV/: CMakeLists.txt
backend/QtAndOpenCV/src/: QtAndOpenCvTools.cpp  QtAndOpenCvTools.h
build-linux/: .gitignore  build.sh
frontend/: CMakeLists.txt
frontend/res/: mainwidget.ui  resources.qrc
frontend/src/: Canny.cpp  Canny.h  MainWidget.cpp  MainWidget.h  Median.cpp  Median.h  main.cpp
